--- a/preamble.tex
+++ b/preamble.tex
@@ -479,4 +479,4 @@ morekeywords={}
 
   \makeatletter \renewcommand \listoftodos{\section*{List of Todos} \@starttoc{tdo}}
   \renewcommand\l@todo[2]
-    {\par\noindent \textit{#2}, \parbox{10cm}{#1}\par} \makeatother
+    {\par\noindent \textit{#2}, \parbox{\textwidth}{#1}\par} \makeatother
