--- a/Report.tex
+++ b/Report.tex
@@ -33,8 +33,9 @@
 \label{chap:analysis}
 \input{Content/Analysis/analysis}
 
-
-
+\chapter{Methodology}
+\label{chap:methodology}
+\input{Content/Methodology/xp}
 
 \chapter{Test}
 \label{chap:test}
