--- a/Content/Preface/signature.tex
+++ b/Content/Preface/signature.tex
@@ -1,2 +1,2 @@
-\doublesignaturestart{Alexander Drægert}{Christoffer N'Dûru}
-\doublesignature{Dan Petersen}{Kristian Thomsen}
+\doublesignaturestart{Alexander Drægert}{Christoffer Nduru}
+\doublesignature{Dan Petersen}{Kristian M. Thomsen}
