added bib entry

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -34,3 +34,12 @@
   howpublished = "\url{www.test.dk}",
   note = "[Online; Accessed dd-mm-yyyy]"
 }
+
+@book{xp:explained,
+ author = {Beck, Kent},
+ title = {Extreme Programming Explained: Embrace Change},
+ year = {2000},
+ isbn = {0-201-61641-6},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+} 
