something about the idea behind the practices

--- a/Content/Methodology/xp.tex
+++ b/Content/Methodology/xp.tex
@@ -20,3 +20,38 @@ test
 %which of the 12 practices do we implement?
 % 	test-driven development	
 %   which do we actually use?
+Extreme programming has 12 core practices, as stated in \citep{xp:explained}. The practices are as follows
+
+\begin{itemize}
+\item The Planning Game
+\item Small Releases
+\item Metaphor
+\item Simple Design
+\item Testing
+\item Refactoring
+\item Pair Progrmaming
+\item Collective Ownership
+\item Continous integration
+\item 40-hour Work Week
+\item On-site Costumers
+\item Coding Standards
+\end{itemize}
+
+The idea behind having these practices is that while one practice in itself is weak, the others can cover that weakness. This creates a synergy effect between the practices. This, howeve, also means that if one or more of the practices are chosen to be discontinued, careful consideration should be made when deciding which to discontinue.
+
+Selected practices\citep{xp:explained}. Numbered for practical purposes
+
+\begin{enumerate}
+\item The Planning Game
+\item Small Releases
+\item Metaphor
+\item Simple Design
+\item Testing
+\item Refactoring
+\item Pair Progrmaming
+\item Collective Ownership
+\item Continous integration
+\item 40-hour Work Week
+\item On-site Costumers
+\item Coding Standards
+\end{enumerate}
