startet on intro to methods

--- a/Content/Methodology/xp.tex
+++ b/Content/Methodology/xp.tex
@@ -1,8 +1,10 @@
 % intro
 % %
 \section{Extreme Programming}
+There is a lot of interest development methodologies in recent years \Kristian{find kilde, etv. omskriv}. One such methodology is XP (Extreme Programming) which we have chosen as a focus of the project, in this section we will look at our motivation for choosing XP, what we hope to accomplice and how we plan to do it.
+	
 \subsection{Motivation}
-test
+
 %  to learn to program in another way (the extreme way)
 % keep track of progress
 % create a better product (higher quality)
@@ -10,11 +12,31 @@ test
 % * why XP and not another agile method?
 % 	XP adv: group size fits, iteration length, self-management
 \subsection{Goals}
+By using XP for this project we hope to achieve a number of goals:
+\begin{itemize}
+\item Achieving high test coverage.
+\item Produce robust, high quality code.
+\item Improve communication.
+\item Acquire new skills in agile development.
+\end{itemize}
 % better code/product quality
 % 	* thorough testing
 % 	* robustness (compare to earlier projects)
 % improved communication in the group
 % 	better tracking of issues
+
+When setting goals for the project it is also important to measure how well we achieve these goals. 
+\paragraph{Testing Metrics}
+When evaluating how well tested a software there is a number of methods available such as line coverage, branch coverage and ...
+\Kristian{Vi skal baser dette på Test og Verification kurset}
+
+\paragraph{High Quality Code}
+There are many ways to define high quality code, such as lack of bad smells, good readability and simplicity etc...
+
+\paragraph{Communication}
+How to evaluate improvements in communication is going to be subjective.
+
+
 \subsection{Approach}
 \subsubsection{The 12 Practices}
 %which of the 12 practices do we implement?
