--- a/Content/Methodology/xp.tex
+++ b/Content/Methodology/xp.tex
@@ -4,7 +4,9 @@
 There is a lot of interest development methodologies in recent years \Kristian{find kilde, etv. omskriv}. One such methodology is XP (Extreme Programming) which we have chosen as a focus of the project, in this section we will look at our motivation for choosing XP, what we hope to accomplice and how we plan to do it.
 	
 \subsection{Motivation}
+What characterises a student project is generally loosely specified objectives, no strict requirements exists, requirements may change doing the project, a small and a project group size of three to six members. These characteristics fit well with the agile development methods. 
 
+Not every characteristics fit well though such the experience of programmers.
 %  to learn to program in another way (the extreme way)
 % keep track of progress
 % create a better product (higher quality)
@@ -33,9 +35,13 @@ When evaluating how well tested a software there is a number of methods availabl
 \paragraph{High Quality Code}
 There are many ways to define high quality code, such as lack of bad smells, good readability and simplicity etc...
 
-\paragraph{Communication}
-How to evaluate improvements in communication is going to be subjective.
 
+%Resten er svært at vurdere... 
+
+%\paragraph{Communication}
+%How to evaluate improvements in communication is going to be subjective evaluation.
+
+%
 
 \subsection{Approach}
 \subsubsection{The 12 Practices}
