Added citation to article about running and music relations.

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -43,3 +43,19 @@
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
  address = {Boston, MA, USA},
 } 
+
+@article{musicRunEffectArticle,
+author = {Edworthy, Judy and Waring, Hannah},
+title = {The effects of music tempo and loudness level on treadmill exercise},
+journal = {Ergonomics},
+volume = {49},
+number = {15},
+pages = {1597-1610},
+year = {2006},
+doi = {10.1080/00140130600899104},
+note ={PMID: 17090506},
+URL = {http://dx.doi.org/10.1080/00140130600899104},
+eprint = {http://dx.doi.org/10.1080/00140130600899104}
+}
+
+
