thin intro to xp

--- a/Content/Methodology/xp.tex
+++ b/Content/Methodology/xp.tex
@@ -4,9 +4,14 @@
 There is a lot of interest development methodologies in recent years \Kristian{find kilde, etv. omskriv}. One such methodology is XP (Extreme Programming) which we have chosen as a focus of the project, in this section we will look at our motivation for choosing XP, what we hope to accomplice and how we plan to do it.
 	
 \subsection{Motivation}
+%Why agile
 What characterises a student project is generally loosely specified objectives, no strict requirements exists, requirements may change doing the project, a small and a project group size of three to six members. These characteristics fit well with the agile development methods. 
 
-Not every characteristics fit well though such the experience of programmers.
+Though not every characteristics fit well such the experience of programmers.
+
+%Why XP
+Some aspect of XP appeal to us such as short iterations and self management. Additionally we hope the high requirement of an XP programmer will allow us to improve our own programming style and practices and in turn allow to develop better products.
+
 %  to learn to program in another way (the extreme way)
 % keep track of progress
 % create a better product (higher quality)
