--- a/Report.tex
+++ b/Report.tex
@@ -68,7 +68,7 @@
 
 
 
-
+\Kristian{Ret cites så de indeholder mere en bare årstal og forfatter}
 
 %%% DELETE BEFORE FINAL %%%
 \chapter{Examples \& ToDo}
