Initial draft for problem statement written. Last paragraph should be improved.

--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -1,22 +1,13 @@
 \section{Problem Statement}
-Running is a popular form of exercise, but can be found tedious and boring. This feeling as well as the results?? can be improved through music (cite). However one must be careful of what music is playing while running, because too slow music can decrease your efficiency (cite). Today many runners use their smartphones as music players, which enables us to customise the played music through the available sensors.
-Our goal is to match song and running tempo which is best for the runner (cite).
+Running is a popular form of exercise, however it can be a tedious and boring endeavour.
+To better the experience, \citep{musicRunEffectArticle} found that 
+\textit{``... participants enjoyed what they were doing [running] more when they were listening to music of any sort when compared to when they were not.''}
 
+It was further discovered by \citep{musicRunEffectArticle} that the volume and tempo of the music influenced the running experience.
+They discovered that the running speed, while listening to relative slow music, was slower than when not listening to music. Additionally listening to fast paced music resulted in a faster running speed compared to when not listening to music.
 
-Sources:
-Music decreases the feel of exertion with appropriate BPM song. ()
-Not: (http://www.sciencedirect.com/science/article/pii/S1469029202000419)
+%%%%% BELOW SHOULD BE WRITTEN BETTER  %%%%%
+Today many runners use their smartphone as a music player, which can either be placed on the arm or in their pocket.
+The sensors in a smartphone allows for reading the steps per minute and speed of the runner. This can be used to calculate and manage suitable music for the runner at a given time and speed.
 
-Music can improve running speed in nature. (http://scholarcommons.usf.edu/etd/5219/) 
-
-Music can improve running speed on treadmill. ()
-
-Music can increase SPM through high BPM song. ()
-
-Music can decrease SPM through low BPM song. ()
-
-Music can increase the feel of exertion with inappropriate (slow) BPM song. (http://www.sciencedirect.com/science/article/pii/016787609500007F)
-
-
-Music does not change step length (http://scholarcommons.usf.edu/etd/5219/)
 
