Corrected Christoffer comment mistake :-)

--- a/preamble.tex
+++ b/preamble.tex
@@ -125,8 +125,8 @@ morekeywords={}
 %  Matematiske formler og maskinkode 
 \usepackage{amsmath,amssymb,stmaryrd} 	% Bedre matematik og ekstra fonte
 \usepackage{textcomp}                 	% Adgang til tekstsymboler
-%\usepackage{mathtools}			% Udvidelse af amsmath-pakken.
-%\usepackage{siunitx}			% Flot og konsistent præsentation af tal og enheder med \SI{tal}{enhed}
+\usepackage{mathtools}			% Udvidelse af amsmath-pakken.
+\usepackage{siunitx}			% Flot og konsistent præsentation af tal og enheder med \SI{tal}{enhed}
 
 %  Referencer, bibtex og url'er  %
 \usepackage{url}	% Til at sætte urler op med. Virker sammen med ref
