--- a/PreamblePreview/preamblePreview.tex
+++ b/PreamblePreview/preamblePreview.tex
@@ -20,4 +20,4 @@ public class HelloWorld {
 \end{lstlisting}
 \end{code}
 
-This is how you refer to a source written by \citep{Test}.
+This is how you refer to a source written by \citet{musicRunEffectArticle}.
