Converted previous citing style to current style.

--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -1,9 +1,9 @@
 \section{Problem Statement}
 Running is a popular form of exercise, however it can be a tedious and boring endeavour.
-To better the experience, \citep{musicRunEffectArticle} found that 
+To better the experience, \citet{musicRunEffectArticle} found that 
 \textit{``... participants enjoyed what they were doing [running] more when they were listening to music of any sort when compared to when they were not.''}
 
-It was further discovered by \citep{musicRunEffectArticle} that the volume and tempo of the music influenced the running experience.
+It was further discovered by \citet{musicRunEffectArticle} that the volume and tempo of the music influenced the running experience.
 They discovered that the running speed, while listening to relative slow music, was slower than when not listening to music. Additionally listening to fast paced music resulted in a faster running speed compared to when not listening to music.
 
 %%%%% BELOW SHOULD BE WRITTEN BETTER  %%%%%
