--- a/Content/Methodology/xp.tex
+++ b/Content/Methodology/xp.tex
@@ -54,7 +54,7 @@ There are many ways to define high quality code, such as lack of bad smells, goo
 %which of the 12 practices do we implement?
 % 	test-driven development	
 %   which do we actually use?
-Extreme Programming has 12 core practices, as stated in \citep{xp:explained}. The practices are as follows
+Extreme Programming has 12 core practices, as stated by \citet{xp:explained}. The practices are as follows
 
 \begin{itemize}
 \item The Planning Game
@@ -71,7 +71,7 @@ Extreme Programming has 12 core practices, as stated in \citep{xp:explained}. Th
 \item Coding Standards
 \end{itemize}
 
-According to \citep[p. 53]{xp:explained}, the idea behind these practices is that while one practice in itself is weak, the others can cover that weakness. This creates a synergy effect between the practices. This also means that if one or more of the practices are chosen to be discontinued or modified, careful consideration should be made when deciding which to discontinue or modify, as stated by\Christoffer{find source in xp explained}.
+According to \citet[p. 53]{xp:explained}, the idea behind these practices is that while one practice in itself is weak, the others can cover that weakness. This creates a synergy effect between the practices. This also means that if one or more of the practices are chosen to be discontinued or modified, careful consideration should be made when deciding which to discontinue or modify, as stated by\Christoffer{find source in xp explained}.
 
 Not all of the 12 practices were completely adopted\Christoffer{Nutid? Datid?}. The adopted practices in this project are\\
 
@@ -90,18 +90,18 @@ Not all of the 12 practices were completely adopted\Christoffer{Nutid? Datid?}. 
 \item Coding Standards
 \end{itemize}
 
-A number of core practices are expected to be modified to fit the purpose of the project better. These are the Planning Game, Metaphor and On-site Customers.\\\\
+A number of core practices are expected to be modified to fit the purpose of the project better. These are the Planning Game, Metaphor and On-site Customers.
 
-Instead of the Planning Game, Planning Poker as described by \citep{xp:planningPoker} \Christoffer{do we follow this completely?}, are expected to be used instead. The main difference between the two is that the act of establishing an estimate of a task in the iteration back log is done collectively. In the Planning Game collective estimation of a task is done, but as stated in \citep[p. 58]{xp:planning} optimism wins. This means that if, after discussion there is still disagreements about the estimate for a given task, the lowest estimation is chosen. In planning poker, everybody agrees on an estimate before it is assigned to a task. We suspect that it would not be irresponsible to replace the Planning Game with Planning Poker, because Planning Poker ensures that all team members have the same understanding of a task. If a team member makes a very low estimate and the rest of the team make high estimates, chances are they have a very different understanding of the work that needs to be done. Another advantage is that since we are relatively inexperienced software developers, everyone agreeing on an estimate will likely decrease the odds of the estimate being wrong.\Christoffer{How inexperienced are we?}.\\\\
+Instead of the Planning Game, Planning Poker as described by \citet{xp:planningPoker} \Christoffer{do we follow this completely?}, are expected to be used instead. The main difference between the two is that the act of establishing an estimate of a task in the iteration back log is done collectively. In the Planning Game collective estimation of a task is done, but as stated by \citet[p. 58]{xp:planning} optimism wins. This means that if, after discussion there is still disagreements about the estimate for a given task, the lowest estimation is chosen. In planning poker, everybody agrees on an estimate before it is assigned to a task. We suspect that it would not be irresponsible to replace the Planning Game with Planning Poker, because Planning Poker ensures that all team members have the same understanding of a task. If a team member makes a very low estimate and the rest of the team make high estimates, chances are they have a very different understanding of the work that needs to be done. Another advantage is that since we are relatively inexperienced software developers, everyone agreeing on an estimate will likely decrease the odds of the estimate being wrong.\Christoffer{How inexperienced are we?}.
 
-The core practice Small Releases will be implemented by releasing new, working features with small increments, every iteration consisting of around two weeks.\\\\
+The core practice Small Releases will be implemented by releasing new, working features with small increments, every iteration consisting of around two weeks.
 
-Metaphors are not implemented since we are not able find a suitable one for our system.\Christoffer{uddybende begrundelse?}.\\\\
+Metaphors are not implemented since we are not able find a suitable one for our system.\Christoffer{uddybende begrundelse?}.
 
 Simple Design\Christoffer{What should we do about this?}
 
-Testing will be implemented by writing tests before writing any production code. After the tests and production code is written, they will be run frequently to ensure that everything is working as it should, also after adding new features to the system.\\\\
+Testing will be implemented by writing tests before writing any production code. After the tests and production code is written, they will be run frequently to ensure that everything is working as it should, also after adding new features to the system.
 
-The Refactoring practice will be implemented by team members making changes where they are needed. Also, code standards will be discussed and adhered to. Pair Programing also aids refactoring since two people programming together will be more likely to have the courage to refactor difficult pieces of code. The Testing practice also aids in this since tests can be run after refactoring which lessens the possibility of the code breaking.\\\\
+The Refactoring practice will be implemented by team members making changes where they are needed. Also, code standards will be discussed and adhered to. Pair Programing also aids refactoring since two people programming together will be more likely to have the courage to refactor difficult pieces of code. The Testing practice also aids in this since tests can be run after refactoring which lessens the possibility of the code breaking.
 
 
