Added comment about source 4 (pokerPlanning),

--- a/Content/Methodology/xp.tex
+++ b/Content/Methodology/xp.tex
@@ -92,7 +92,7 @@ Not all of the 12 practices were completely adopted\Christoffer{Nutid? Datid?}. 
 
 A number of core practices are expected to be modified to fit the purpose of the project better. These are the Planning Game, Metaphor and On-site Customers.
 
-Instead of the Planning Game, Planning Poker as described by \citet{xp:planningPoker} \Christoffer{do we follow this completely?}, are expected to be used instead. The main difference between the two is that the act of establishing an estimate of a task in the iteration back log is done collectively. In the Planning Game collective estimation of a task is done, but as stated by \citet[p. 58]{xp:planning} optimism wins. This means that if, after discussion there is still disagreements about the estimate for a given task, the lowest estimation is chosen. In planning poker, everybody agrees on an estimate before it is assigned to a task. We suspect that it would not be irresponsible to replace the Planning Game with Planning Poker, because Planning Poker ensures that all team members have the same understanding of a task. If a team member makes a very low estimate and the rest of the team make high estimates, chances are they have a very different understanding of the work that needs to be done. Another advantage is that since we are relatively inexperienced software developers, everyone agreeing on an estimate will likely decrease the odds of the estimate being wrong.\Christoffer{How inexperienced are we?}.
+Instead of the Planning Game, Planning Poker as described by \citet{xp:planningPoker}\Alexander{I don't believe this is a credible source, can't we find it explained in a book?} \Christoffer{do we follow this completely?}, are expected to be used instead. The main difference between the two is that the act of establishing an estimate of a task in the iteration back log is done collectively. In the Planning Game collective estimation of a task is done, but as stated by \citet[p. 58]{xp:planning} optimism wins. This means that if, after discussion there is still disagreements about the estimate for a given task, the lowest estimation is chosen. In planning poker, everybody agrees on an estimate before it is assigned to a task. We suspect that it would not be irresponsible to replace the Planning Game with Planning Poker, because Planning Poker ensures that all team members have the same understanding of a task. If a team member makes a very low estimate and the rest of the team make high estimates, chances are they have a very different understanding of the work that needs to be done. Another advantage is that since we are relatively inexperienced software developers, everyone agreeing on an estimate will likely decrease the odds of the estimate being wrong.\Christoffer{How inexperienced are we?}.
 
 The core practice Small Releases will be implemented by releasing new, working features with small increments, every iteration consisting of around two weeks.
 
