Corrected spelling mistakes in problem statement.

--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -4,7 +4,7 @@ To better the experience, \citet{musicRunEffectArticle} found that
 \textit{``... participants enjoyed what they were doing [running] more when they were listening to music of any sort when compared to when they were not.''}
 
 It was further discovered by \citet{musicRunEffectArticle} that the volume and tempo of the music influenced the running experience.
-They discovered that the running speed, while listening to relative slow music, was slower than when not listening to music. Additionally listening to fast paced music resulted in a faster running speed compared to when not listening to music.
+They discovered that the running speed, while listening to relatively slow music, was slower than when not listening to music. Additionally listening to fast-paced music resulted in a faster running speed, compared to when not listening to music.
 
 %%%%% BELOW SHOULD BE WRITTEN BETTER  %%%%%
 Today many runners use their smartphone as a music player, which can either be placed on the arm or in their pocket.
