Changed word for more precise statement.

--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -1,6 +1,6 @@
 \section{Problem Statement}
 Running is a popular form of exercise, however it can be a tedious and boring endeavour.
-To better the experience, \citet{musicRunEffectArticle} found that 
+To improve the experience, \citet{musicRunEffectArticle} found that 
 \textit{``... participants enjoyed what they were doing [running] more when they were listening to music of any sort when compared to when they were not.''}
 
 It was further discovered by \citet{musicRunEffectArticle} that the volume and tempo of the music influenced the running experience.
