further improved draft of problem statement

--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -1,13 +1,20 @@
 \section{Problem Statement}
-Running is a popular form of exercise, however it can be a tedious and boring endeavour.
+Running is a popular form of exercise, however it can be a tedious and uninspiring endeavour.
 To improve the experience, \citet{musicRunEffectArticle} found that 
 \textit{``... participants enjoyed what they were doing [running] more when they were listening to music of any sort when compared to when they were not.''}
 
 It was further discovered by \citet{musicRunEffectArticle} that the volume and tempo of the music influenced the running experience.
 They discovered that the running speed, while listening to relatively slow music, was slower than when not listening to music. Additionally listening to fast-paced music resulted in a faster running speed, compared to when not listening to music.
 
-%%%%% BELOW SHOULD BE WRITTEN BETTER  %%%%%
-Today many runners use their smartphone as a music player, which can either be placed on the arm or in their pocket.
-The sensors in a smartphone allows for reading the steps per minute and speed of the runner. This can be used to calculate and manage suitable music for the runner at a given time and speed.
+Today many runners use their smartphone as a music player, which can either be placed on their arm or in their pocket.
+The sensors in a smartphone allows for reading the steps per minute and speed of the runner.
 
+\begin{center}
+\textit{How can this data be used and calculated upon to provide the runner with an enjoyable running experience?}
+\end{center}
 
+With a smartphone placed on their arm or in their pocket, it is difficult to navigate applications through visual feedback. Furthermore operating the smartphone while running decreases the navigability of the smartphone. The runner's form should not be disrupted by navigating. \Alexander{SOURCE} 
+
+\begin{center}
+\textit{How can a smartphone application be operated without disrupting the runner's form?}
+\end{center}
