--- a/Content/Analysis/problemStatement.tex
+++ b/Content/Analysis/problemStatement.tex
@@ -13,7 +13,9 @@ The sensors in a smartphone allows for reading the steps per minute and speed of
 \textit{How can this data be used and calculated upon to provide the runner with an enjoyable running experience?}
 \end{center}
 
-With a smartphone placed on their arm or in their pocket, it is difficult to navigate applications through visual feedback. Furthermore operating the smartphone while running decreases the navigability of the smartphone. The runner's form should not be disrupted by navigating. \Alexander{SOURCE} 
+With a smartphone placed on their arm or in their pocket, it is difficult to navigate applications through visual feedback. Furthermore operating the smartphone while running decreases the navigability of the smartphone. \Alexander{SOURCE} 
+The runner's form should not be disrupted by navigating. 
+\Alexander{Re-write last (previous $\uparrow$) line.}
 
 \begin{center}
 \textit{How can a smartphone application be operated without disrupting the runner's form?}
