--- a/Content/Methodology/xp.tex
+++ b/Content/Methodology/xp.tex
@@ -3,7 +3,7 @@
 XP (Extreme Programming) is an agile development methodology. This project will be developed while using the principles of XP.
 
 \subsection{Motivation}
-XP follow 12 principles.\Alexander{Source to Beck Book+}
+XP follow 12 principles.\Alexander{Source to Beck Book}
 
 These 12 principles should ease the development of high quality software.
 This is partly done by ensuring thorough testing, continuously refactoring, and efficient knowledge sharing.
@@ -42,9 +42,9 @@ The adopted practices in this project are:
 
 \paragraph{Refactoring} will be implemented by team members making changes where they are needed. Also, code standards will be discussed and adhered to. Pair Programing also aids refactoring since two people programming together will be more likely to have the courage to refactor difficult pieces of code. The Testing practice also aids in this since tests can be run after refactoring which lessens the possibility of the code breaking.
 
-%\paragraph{Small Releases} have been implemented by releasing new, working features with small increments, every iteration consisting of around two weeks.
+\paragraph{Small Releases} %have been implemented by releasing new, working features with small increments, every iteration consisting of around two weeks.
 
-%\paragraph{Simple Design}\Christoffer{What should we do about this?}
+\paragraph{Simple Design}%\Christoffer{What should we do about this?}
 
 %Discontinued practices
 The practices that have been discontinued are:
